--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@metamask/detect-provider": "^2.0.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.0",
+    "@uniswap/sdk": "^3.0.3",
     "@walletconnect/web3-provider": "^1.8.0",
     "core-js": "^3.19.3",
+    "ethers": "^6.4.0",
     "html2canvas": "^1.4.1",
     "near-api-js": "^1.0.0",
     "nuxt": "^2.15.8",
