--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nuxtjs/i18n": "^7.3.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "core-js": "^3.19.3",
+    "ethers": "^6.4.1",
     "html2canvas": "^1.4.1",
     "near-api-js": "^1.0.0",
     "nuxt": "^2.15.8",
