--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS='--openssl-legacy-provider' nuxt" ,
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' nuxt build",
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' nuxt start",
-    "generate": "NODE_OPTIONS='--openssl-legacy-provider' nuxt generate",
+    "dev": "nuxt" ,
+    "build": "nuxt build",
+    "start": "nuxt start",
+    "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:js && npm run lint:prettier",
