--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@walletconnect/web3-provider": "^1.8.0",
     "core-js": "^3.19.3",
     "ethers": "^6.6.1",
+    "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "near-api-js": "^1.0.0",
     "nuxt": "^2.15.8",
