--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@nuxtjs/i18n": "^7.3.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "core-js": "^3.19.3",
-    "ethers": "^6.6.1",
+    "web3": "^1.8.1",
     "fs": "^0.0.1-security",
     "html2canvas": "^1.4.1",
     "near-api-js": "^1.0.0",
