--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue-browser-geolocation": "^1.8.0",
     "vue-debounce": "^4.0.0",
     "vue-server-renderer": "^2.7.14",
+    "vue-session": "^1.0.0",
     "vue-template-compiler": "^2.6.14",
     "vue2-gmap-custom-marker": "^6.1.0",
     "vue2-google-maps": "^0.10.7",
