--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@metamask/sdk": "^0.3.0",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.0",
+    "@vuejs-community/vue-filter-numeric-format": "^1.1.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "core-js": "^3.19.3",
     "fs": "^0.0.1-security",
@@ -29,6 +30,7 @@
     "vue-apexcharts": "^1.6.2",
     "vue-browser-geolocation": "^1.8.0",
     "vue-debounce": "^4.0.0",
+    "vue-filter-number-format": "^3.0.1",
     "vue-server-renderer": "^2.7.14",
     "vue-session": "^1.0.0",
     "vue-template-compiler": "^2.6.14",
