now we need to use the graph

--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@nuxtjs/i18n": "^7.3.0",
     "@vuejs-community/vue-filter-numeric-format": "^1.1.0",
     "@walletconnect/web3-provider": "^1.8.0",
+    "apollo-boost": "^0.4.9",
     "core-js": "^3.19.3",
     "fs": "^0.0.1-security",
+    "graphql": "^15.8.0",
     "html2canvas": "^1.4.1",
     "near-api-js": "^1.0.0",
     "nuxt": "^2.15.8",
@@ -28,6 +30,7 @@
     "vue": "^2.7.14",
     "vue-advanced-chat": "^2.0.1",
     "vue-apexcharts": "^1.6.2",
+    "vue-apollo": "^3.1.0",
     "vue-browser-geolocation": "^1.8.0",
     "vue-debounce": "^4.0.0",
     "vue-filter-number-format": "^3.0.1",
