--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@uniswap/sdk": "^3.0.3",
     "@vuejs-community/vue-filter-numeric-format": "^1.1.0",
     "@walletconnect/web3-provider": "^1.8.0",
+    "apexcharts": "^3.44.0",
     "core-js": "^3.19.3",
     "ethers": "^4.0.0",
     "fs": "^0.0.1-security",
