--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
-    "@babel/eslint-parser": "^7.16.3",
     "@0xsquid/sdk": "2.8.0-beta.0",
     "@0xsquid/squid-types": "0.1.31",
+    "@babel/eslint-parser": "^7.16.3",
     "@metamask/detect-provider": "^2.0.0",
     "@metamask/sdk": "^0.3.0",
     "@nuxtjs/apollo": "^4.0.1-rc.5",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.3.0",
     "@uniswap/sdk": "^3.0.3",
+    "@uniswap/v2-sdk": "github:uniswap/v2-sdk",
     "@vuejs-community/vue-filter-numeric-format": "^1.1.0",
     "@walletconnect/web3-provider": "^1.8.0",
     "apexcharts": "^3.44.0",
